2013-09-02  Bob Halley  <halley@dnspython.org>

	* (Version 1.11.1 released)

2013-09-01  Bob Halley  <halley@dnspython.org>

	* dns/tsigkeyring.py (to_text): we want keyname.to_text(), not
	  dns.name.to_text(keyname).  Thangs to wangwang for the fix.

2013-08-26  Bob Halley  <halley@dnspython.org>

	* dns/tsig.py (sign): multi-message TSIGs were broken for
	  algorithms other than HMAC-MD5 because we weren't passing the
	  right digest module to the HMAC code.  Thanks to salzmdan for
	  reporting the bug.

2013-08-09  Bob Halley  <halley@dnspython.org>

	* dns/dnssec.py (_find_candidate_keys): we tried to extract the
	  key from the wrong variable name.  Thanks to Andrei Fokau for the
	  fix.

2013-07-08  Bob Halley  <halley@dnspython.org>

	* dns/resolver.py: we want 'self.retry_servfail' not just
	  retry_servfail.  Reported by many, thanks!  Thanks to
	  Jeffrey C. Ollie for the fix.

2013-07-08  Bob Halley  <halley@dnspython.org>

	* tests/grange.py: fix tests to use older-style print formatting
	  for backwards compatibility with python 2.4.  Thanks to
	  Jeffrey C. Ollie for the fix.

2013-07-01  Bob Halley  <halley@dnspython.org>

	* (Version 1.11.0 released)

2013-04-28  Bob Halley  <halley@dnspython.org>

	* dns/name.py (Name.to_wire): Do not add items with offsets >= 2^14
	  to the compression table.  Thanks to Casey Deccio for discovering
	  this bug.

2013-04-26  Bob Halley  <halley@dnspython.org>

	* dns/ipv6.py (inet_ntoa): We now comply with RFC 5952 section
	  5.2.2, by *not* using the :: syntax to shorten just one 16-bit
	  field.  Thanks to David Waitzman for reporting the bug and
	  suggesting the fix.

2013-03-31  Bob Halley  <halley@dnspython.org>

	* lock caches in case they are shared

	* raise YXDOMAIN if we see one

	* do not print empty rdatasets

	* Add contributed $GENERATE support (thanks uberj)

	* Remove DNSKEY keytag uniqueness assumption (RFC 4034, section 8)
	  (thanks James Dempsey)

2012-09-25  Sean Leach
